--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Install | Precision Installation for Modern Learning Environments</title>
-    <meta name="description" content="The premier B2B installation partner for furniture dealers in Texas. We provide flawless execution, radical professionalism, and unwavering reliability to protect your reputation.">
+    <title>Elite Install | Texas School Furniture Installation | Dallas, TX</title>
+    <meta name="description" content="Elite Install is a professional B2B partner for school furniture dealers in Dallas and across Texas, providing reliable, expert installation of educational and FF&E furniture.">
+    <meta name="keywords" content="school furniture installation, educational furniture installer, commercial furniture installation, office furniture installation, FF&E installation, Dallas, Fort Worth, Houston, Austin, San Antonio, Texas, B2B installation services">
 
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
@@ -12,14 +13,16 @@
 
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
 
-    <meta property="og:title" content="Elite Install | Your Reputation, Installed.">
-    <meta property="og:description" content="The premier B2B installation partner for furniture dealers. Flawless execution and unwavering reliability.">
+    <meta property="og:title" content="Elite Install | Texas School Furniture Installation">
+    <meta property="og:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.eliteinstallandhaul.com/">
     <meta property="og:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg">
+    <meta property="og:site_name" content="Elite Install">
+    
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Elite Install | Your Reputation, Installed.">
-    <meta name="twitter:description" content="The premier B2B installation partner for furniture dealers.">
+    <meta name="twitter:title" content="Elite Install | Texas School Furniture Installation">
+    <meta name="twitter:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta name="twitter:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg">
 
     <link rel="stylesheet" href="style.css">
@@ -28,12 +31,12 @@
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
-      "name": "Elite Install & Haul",
+      "name": "Elite Install & Haul: School Furniture Installation",
       "url": "https://www.eliteinstallandhaul.com/",
       "logo": "https://www.eliteinstallandhaul.com/images/logo.png",
       "telephone": "+1-469-380-1551",
       "email": "tylerherrick13@gmail.com",
-      "description": "The premier B2B installation partner for furniture dealers, providing flawless execution, radical professionalism, and unwavering reliability.",
+      "description": "Elite Install & Haul is a premier B2B installation partner for school and commercial furniture dealers located in Dallas, TX and serving all of Texas. We specialize in the professional installation of classroom furniture, library shelving, science labs, office systems, and complete FF&E packages.",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Carrollton",
@@ -43,39 +46,34 @@
       },
       "areaServed": [
         {
-          "@type": "AdministrativeArea",
+          "@type": "City",
           "name": "Dallas"
         },
         {
-          "@type": "AdministrativeArea",
+          "@type": "City",
+          "name": "Fort Worth"
+        },
+        {
+          "@type": "City",
           "name": "Houston"
         },
         {
-          "@type": "AdministrativeArea",
+          "@type": "City",
           "name": "Austin"
         },
         {
-          "@type": "AdministrativeArea",
+          "@type": "City",
           "name": "San Antonio"
         },
         {
-            "@type": "AdministrativeArea",
-            "name": "West Texas"
+          "@type": "State",
+          "name": "Texas"
         }
       ],
       "openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
-      "potentialAction": {
-        "@type": "ReserveAction",
-        "target": {
-          "@type": "EntryPoint",
-          "urlTemplate": "https://www.eliteinstallandhaul.com/contact.html",
-          "inLanguage": "en-US",
-          "actionPlatform": [
-            "http://schema.org/DesktopWebPlatform",
-            "http://schema.org/IOSPlatform",
-            "http://schema.org/AndroidPlatform"
-          ]
-        }
+      "founder": {
+        "@type": "Person",
+        "name": "Tyler Herrick"
       }
     }
     </script>
@@ -111,24 +109,11 @@
         <section class="hero">
             <div id="hero-canvas-container"></div>
             <div class="container hero-content">
-                <h1 class="anim-fade-in-up">Precision Installation for Modern Learning Environments.</h1>
-                <p class="subtitle anim-fade-in-up" data-delay="100">The B2B installation partner for dealers who require flawless execution and zero compromises. We founded Elite Install to deliver the one thing you can't afford to risk: certainty.</p>
+                <h1 class="anim-fade-in-up">Your Reputation, Installed.</h1>
+                <p class="subtitle anim-fade-in-up" data-delay="100">A new standard in B2B furniture installation has arrived. We are a partner built on a simple promise: to protect your reputation as if it were our own. By prioritizing professionalism and clear communication, we deliver results that build trust with you and your clients.</p>
                 <div class="cta-buttons anim-fade-in-up" data-delay="200">
-                    <a href="services.html" class="btn btn-primary">Explore Services</a>
+                    <a href="services.html" class="btn btn-primary">Explore Our Services</a>
                     <a href="contact.html" class="btn btn-secondary">Request a Quote</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="client-logos-section section-condensed">
-             <div class="container">
-                <h4 class="client-logos-title">Trusted by Texas's Leading Furniture Dealers</h4>
-                <div class="client-logos-grid">
-                    <div class="client-logo-placeholder"><span>DEALER LOGO</span></div>
-                    <div class="client-logo-placeholder"><span>DEALER LOGO</span></div>
-                    <div class="client-logo-placeholder"><span>DEALER LOGO</span></div>
-                    <div class="client-logo-placeholder"><span>DEALER LOGO</span></div>
-                    <div class="client-logo-placeholder"><span>DEALER LOGO</span></div>
                 </div>
             </div>
         </section>
@@ -136,14 +121,14 @@
         <section class="section section-accented principles-section">
             <div class="container">
                 <div class="section-header anim-fade-in-up">
-                    <h2>The Foundation of Certainty</h2>
-                    <p>We built our company on a foundation of four commitments. These are not goals; they are the non-negotiable standards we bring to every project, every day.</p>
+                    <h2>Our Foundational Commitments</h2>
+                    <p>These are the principles that define our work. They are not aspirational goals, but the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card anim-fade-in-up"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div><h3>Unwavering Reliability</h3><p>Schedules are promises. We invest heavily in logistics and pre-planning to ensure your project unfolds seamlessly, protecting your timeline, budget, and peace of mind.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="100"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div><h3>Radical Professionalism</h3><p>Our uniformed, background-checked installers are ambassadors for your brand. We prioritize courtesy, cleanliness, and respect as core pillars of our service.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="200"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div><h3>Expert Efficiency</h3><p>We believe in doing it right the first time. We don’t use temporary labor. Our dedicated teams use the right tools and training to prevent costly punch lists and return trips.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="300"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div><h3>Proactive Communication</h3><p>You will never have to chase us for an update. We provide a single point of contact and a clear communication rhythm, giving you the control to manage client expectations.</p></div>
+                    <div class="feature-card anim-fade-in-up"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div><h3>Unwavering Reliability</h3><p>Your schedule is our guide. We approach every project with thorough planning and logistical foresight to ensure your timeline is respected and your peace of mind is protected.</p></div>
+                    <div class="feature-card anim-fade-in-up" data-delay="100"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div><h3>Radical Professionalism</h3><p>Our uniformed crew understands they are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean and orderly site to reflect the quality you promise.</p></div>
+                    <div class="feature-card anim-fade-in-up" data-delay="200"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div><h3>Dedicated Expertise</h3><p>We get it right the first time. We do not use temporary labor. Our full-time, dedicated team has the training and tools necessary to execute installations efficiently, minimizing punch lists and return trips.</p></div>
+                    <div class="feature-card anim-fade-in-up" data-delay="300"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div><h3>Proactive Communication</h3><p>You will always be informed. We establish a clear rhythm of communication and provide a single point of contact, so you never have to guess the status of your project.</p></div>
                 </div>
             </div>
         </section>
@@ -151,8 +136,8 @@
         <section class="section process-section-container">
             <div class="container anim-fade-in-up">
                 <div class="section-header">
-                    <h2>Certainty, by Design. Our Process.</h2>
-                    <p>Success isn't an accident. It's the result of a disciplined, transparent process that ensures alignment and excellence from start to finish.</p>
+                    <h2>A Process Designed for Peace of Mind</h2>
+                    <p>Success is intentional. Our disciplined and transparent process was created to eliminate surprises and ensure a seamless, professional experience from start to finish.</p>
                 </div>
             </div>
             <div class="process-horizontal-scroll">
@@ -161,28 +146,28 @@
                         <div class="process-step-content">
                             <span>1</span>
                             <h3>Discovery & Planning</h3>
-                            <p>We begin with a detailed project review, site-readiness confirmation, and logistical alignment to anticipate challenges before they arise.</p>
+                            <p>We begin with a detailed review of the project scope and site readiness. By confirming logistics early, we identify and solve potential challenges before they impact your project.</p>
                         </div>
                     </div>
                     <div class="process-step">
                         <div class="process-step-content">
                             <span>2</span>
-                            <h3>Flawless Execution</h3>
-                            <p>Our professional crew arrives on-time with the right tools, executing the plan with meticulous attention to detail and safety protocols.</p>
+                            <h3>Professional Execution</h3>
+                            <p>Our crew arrives on-time, in uniform, and prepared. We execute the installation plan with skill and a focus on safety, treating your client's space with the utmost respect.</p>
                         </div>
                     </div>
                     <div class="process-step">
                         <div class="process-step-content">
                             <span>3</span>
-                            <h3>Quality Control & Hand-off</h3>
-                            <p>We conduct a rigorous post-installation walkthrough to ensure a zero-item punch list, leaving the site pristine and ready for your client.</p>
+                            <h3>Quality & Hand-off</h3>
+                            <p>We conduct a detailed walkthrough to ensure every component is installed to specification. The site is left pristine and ready for your client, with a goal of a zero-item punch list.</p>
                         </div>
                     </div>
                      <div class="process-step">
                         <div class="process-step-content">
                             <span>4</span>
-                            <h3>Partnership & Follow-up</h3>
-                            <p>Our job isn't done until you're satisfied. We provide clear documentation and remain available for any post-project needs.</p>
+                            <h3>Partnership & Follow-Up</h3>
+                            <p>Our work isn't finished until you are completely satisfied. We provide clear documentation for your records and remain available to support any post-project needs.</p>
                         </div>
                     </div>
                 </div>
@@ -193,7 +178,7 @@
             <div class="container anim-fade-in-up">
                 <div class="section-header"><h2>A Message From Our Founder</h2></div>
                 <blockquote>
-                    <p>"I know the cost of a bad install—the delays, the damaged relationships, and the stress. I built Elite Install to be the solution. We are obsessed with getting the details right so that you can consider the job done the moment you hire us. We look forward to earning your trust and becoming the only call you need to make."</p>
+                    <p>"I've seen firsthand how a poor installation can jeopardize a project and damage a dealer's reputation. I founded Elite Install to be the trusted partner I always looked for: a company obsessed with getting the details right. Our goal is to earn your trust on day one and become the only installation call you'll ever need to make."</p>
                     <cite>
                         <img src="images/tyler-herrick-signature-white.png" alt="Tyler Herrick's Signature" class="founder-signature-image">
                         <span>Tyler Herrick, Founder of Elite Install</span>
@@ -204,8 +189,8 @@
 
         <section class="cta-section anim-fade-in-up">
             <div class="container">
-                <h2>An Investment In Your Peace of Mind.</h2>
-                <p>Ready to partner with an installer that protects your reputation as fiercely as you do? Let's discuss your next project.</p>
+                <h2>Let's Build a Partnership.</h2>
+                <p>Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
                 <a href="contact.html" class="btn btn-primary">Begin the Conversation</a>
             </div>
         </section>
@@ -216,7 +201,7 @@
             <div class="footer-grid">
                 <div class="footer-column about">
                     <p class="footer-logo">Elite Install</p>
-                    <p>The premier B2B installation partner delivering flawless execution, proactive communication, and unwavering reliability for Texas's leading furniture dealers.</p>
+                    <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
                 </div>
                 <div class="footer-column links">
                     <h4>Navigate</h4>
