--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta name="description" content="Elite Install is a professional B2B partner for school furniture dealers in Dallas and across Texas, providing reliable, expert installation of educational and FF&E furniture.">
     <meta name="keywords" content="school furniture installation, educational furniture installer, commercial furniture installation, office furniture installation, FF&E installation, Dallas, Fort Worth, Houston, Austin, San Antonio, Texas, B2B installation services">
 
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0d0d0d">
+    <meta name="msapplication-TileColor" content="#0d0d0d">
+    <meta name="theme-color" content="#0d0d0d">
 
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
 
@@ -33,7 +37,7 @@
       "@type": "ProfessionalService",
       "name": "Elite Install & Haul: School Furniture Installation",
       "url": "https://www.eliteinstallandhaul.com/",
-      "logo": "https://www.eliteinstallandhaul.com/images/logo.png",
+      "logo": "https://www.eliteinstallandhaul.com/images/logo.svg",
       "telephone": "+1-469-380-1551",
       "email": "tylerherrick13@gmail.com",
       "description": "Elite Install & Haul is a premier B2B installation partner for school and commercial furniture dealers located in Dallas, TX and serving all of Texas. We specialize in the professional installation of classroom furniture, library shelving, science labs, office systems, and complete FF&E packages.",
@@ -45,30 +49,12 @@
         "addressCountry": "US"
       },
       "areaServed": [
-        {
-          "@type": "City",
-          "name": "Dallas"
-        },
-        {
-          "@type": "City",
-          "name": "Fort Worth"
-        },
-        {
-          "@type": "City",
-          "name": "Houston"
-        },
-        {
-          "@type": "City",
-          "name": "Austin"
-        },
-        {
-          "@type": "City",
-          "name": "San Antonio"
-        },
-        {
-          "@type": "State",
-          "name": "Texas"
-        }
+        { "@type": "City", "name": "Dallas" },
+        { "@type": "City", "name": "Fort Worth" },
+        { "@type": "City", "name": "Houston" },
+        { "@type": "City", "name": "Austin" },
+        { "@type": "City", "name": "San Antonio" },
+        { "@type": "State", "name": "Texas" }
       ],
       "openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
       "founder": {
@@ -89,7 +75,9 @@
             </div>
         </div>
         <nav class="nav-container container" aria-label="Main Navigation">
-            <a href="index.html" class="logo" aria-label="Elite Install - Home">Elite Install</a>
+            <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
+                <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image">
+            </a>
             <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
                 <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
                 <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
@@ -200,7 +188,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column about">
-                    <p class="footer-logo">Elite Install</p>
+                    <div class="footer-logo">
+                        <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer">
+                    </div>
                     <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
                 </div>
                 <div class="footer-column links">
