--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- SEO-Optimized Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite Install | Texas School Furniture Installation | Dallas, TX</title>
     <meta name="description" content="Elite Install is a professional B2B partner for school furniture dealers in Dallas and across Texas, providing reliable, expert installation of educational and FF&E furniture.">
     <meta name="keywords" content="school furniture installation, educational furniture installer, commercial furniture installation, office furniture installation, FF&E installation, Dallas, Fort Worth, Houston, Austin, San Antonio, Texas, B2B installation services">
 
+    <!-- Favicon Links (Update these paths after generating your favicons) -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -15,8 +17,10 @@
     <meta name="msapplication-TileColor" content="#0d0d0d">
     <meta name="theme-color" content="#0d0d0d">
 
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
 
+    <!-- Social Media Sharing Cards (Open Graph & Twitter) -->
     <meta property="og:title" content="Elite Install | Texas School Furniture Installation">
     <meta property="og:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta property="og:type" content="website">
@@ -29,8 +33,10 @@
     <meta name="twitter:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta name="twitter:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg">
 
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- JSON-LD Structured Data for Rich Snippets -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -68,28 +74,32 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
     <header class="main-header">
-        <div class="utility-header">
-            <div class="container utility-header-content">
+        <div class="header-top-bar">
+            <div class="container">
                 <a href="tel:+14693801551" class="phone-link">(469) 380-1551</a>
                 <a href="contact.html" class="btn btn-utility">Request a Quote →</a>
             </div>
         </div>
-        <nav class="nav-container container" aria-label="Main Navigation">
-            <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
-                <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image">
-            </a>
-            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
-                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-            </button>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="index.html" aria-current="page">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-main-nav">
+            <div class="container nav-container">
+                <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
+                    <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image">
+                </a>
+                <nav class="primary-navigation" aria-label="Main Navigation">
+                    <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
+                        <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                        <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                    </button>
+                    <ul class="nav-links" id="nav-links">
+                        <li><a href="index.html" aria-current="page">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <main id="main-content">
@@ -113,10 +123,26 @@
                     <p>These are the principles that define our work. They are not aspirational goals, but the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card anim-fade-in-up"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div><h3>Unwavering Reliability</h3><p>Your schedule is our guide. We approach every project with thorough planning and logistical foresight to ensure your timeline is respected and your peace of mind is protected.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="100"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div><h3>Radical Professionalism</h3><p>Our uniformed crew understands they are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean and orderly site to reflect the quality you promise.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="200"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div><h3>Dedicated Expertise</h3><p>We get it right the first time. We do not use temporary labor. Our full-time, dedicated team has the training and tools necessary to execute installations efficiently, minimizing punch lists and return trips.</p></div>
-                    <div class="feature-card anim-fade-in-up" data-delay="300"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div><h3>Proactive Communication</h3><p>You will always be informed. We establish a clear rhythm of communication and provide a single point of contact, so you never have to guess the status of your project.</p></div>
+                    <article class="feature-card anim-fade-in-up">
+                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div>
+                        <h3>Unwavering Reliability</h3>
+                        <p>Your schedule is our guide. We approach every project with thorough planning and logistical foresight to ensure your timeline is respected and your peace of mind is protected.</p>
+                    </article>
+                    <article class="feature-card anim-fade-in-up" data-delay="100">
+                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div>
+                        <h3>Radical Professionalism</h3>
+                        <p>Our uniformed crew understands they are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean and orderly site to reflect the quality you promise.</p>
+                    </article>
+                    <article class="feature-card anim-fade-in-up" data-delay="200">
+                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div>
+                        <h3>Dedicated Expertise</h3>
+                        <p>We get it right the first time. We do not use temporary labor. Our full-time, dedicated team has the training and tools necessary to execute installations efficiently, minimizing punch lists and return trips.</p>
+                    </article>
+                    <article class="feature-card anim-fade-in-up" data-delay="300">
+                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div>
+                        <h3>Proactive Communication</h3>
+                        <p>You will always be informed. We establish a clear rhythm of communication and provide a single point of contact, so you never have to guess the status of your project.</p>
+                    </article>
                 </div>
             </div>
         </section>
@@ -188,9 +214,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column about">
-                    <div class="footer-logo">
+                    <a href="index.html" class="footer-logo">
                         <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer">
-                    </div>
+                    </a>
                     <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
                 </div>
                 <div class="footer-column links">
@@ -217,10 +243,12 @@
         </div>
     </footer>
 
+    <!-- GSAP & Three.js Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
+    <!-- Main Application Script -->
     <script src="script.js" defer></script>
 </body>
 </html>
