--- a/index.html
+++ b/index.html
@@ -73,34 +73,8 @@
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
-    <header class="main-header">
-        <div class="header-top-bar">
-            <div class="container">
-                <a href="tel:+14693801551" class="phone-link">(469) 380-1551</a>
-                <a href="contact.html" class="btn btn-utility">Request a Quote →</a>
-            </div>
-        </div>
-        <div class="header-main-nav">
-            <div class="container nav-container">
-                <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
-                    <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image">
-                </a>
-                <nav class="primary-navigation" aria-label="Main Navigation">
-                    <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
-                        <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                        <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                    </button>
-                    <ul class="nav-links" id="nav-links">
-                        <li><a href="index.html" aria-current="page">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <!-- Header will be loaded here by script.js -->
+    <div id="header-placeholder"></div>
 
     <main id="main-content">
 
@@ -210,38 +184,8 @@
         </section>
     </main>
 
-    <footer class="main-footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-column about">
-                    <a href="index.html" class="footer-logo">
-                        <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer">
-                    </a>
-                    <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
-                </div>
-                <div class="footer-column links">
-                    <h4>Navigate</h4>
-                    <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="services.html">Our Services</a></li>
-                        <li><a href="projects.html">View Our Work</a></li>
-                        <li><a href="contact.html">Become a Partner</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column contact">
-                    <h4>Get In Touch</h4>
-                    <address>
-                        <a href="tel:+14693801551">(469) 380-1551</a><br>
-                        <a href="mailto:tylerherrick13@gmail.com">tylerherrick13@gmail.com</a><br>
-                        Serving Dallas, Houston, Austin, & San Antonio.
-                    </address>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Elite Install & Haul. Your Reputation, Installed.</p>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer will be loaded here by script.js -->
+    <div id="footer-placeholder"></div>
 
     <!-- GSAP & Three.js Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
