--- a/footer.html
+++ b/footer.html
@@ -1,27 +1,27 @@
-<footer class="main-footer">
+<footer class="main-footer" role="contentinfo">
     <div class="container">
         <div class="footer-grid">
             <div class="footer-column about">
-                <a href="index.html" class="footer-logo">
-                    <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer">
+                <a href="index.html" class="footer-logo" aria-label="Elite Install & Haul - Home">
+                    <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer" width="180" height="38">
                 </a>
                 <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
             </div>
-            <div class="footer-column links">
-                <h4>Navigate</h4>
-                <ul>
+            <nav class="footer-column links" aria-labelledby="footer-nav-heading">
+                <h4 id="footer-nav-heading">Navigate</h4>
+                <ul role="list">
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
                     <li><a href="projects.html">View Our Work</a></li>
                     <li><a href="contact.html">Become a Partner</a></li>
                 </ul>
-            </div>
-            <div class="footer-column contact">
-                <h4>Get In Touch</h4>
+            </nav>
+            <div class="footer-column contact" aria-labelledby="footer-contact-heading">
+                <h4 id="footer-contact-heading">Get In Touch</h4>
                 <address>
-                    <a href="tel:+14693801551">(469) 380-1551</a><br>
-                    <a href="mailto:tylerherrick13@gmail.com">tylerherrick13@gmail.com</a><br>
-                    Serving Dallas, Houston, Austin, & San Antonio.
+                    <a href="tel:+14693801551" aria-label="Call us at 469-380-1551">(469) 380-1551</a><br>
+                    <a href="mailto:tylerherrick13@gmail.com" aria-label="Email us at tylerherrick13@gmail.com">tylerherrick13@gmail.com</a><br>
+                    <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
                 </address>
             </div>
         </div>
