--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- SEO-Optimized Meta Tags -->
@@ -139,7 +139,8 @@
             right: 0;
             bottom: 0;
             z-index: 1;
-            opacity: 0.3;
+            background: radial-gradient(ellipse at center, rgba(255,255,255,0.02) 0%, transparent 70%);
+            opacity: 0.6;
         }
     </style>
     <link rel="stylesheet" href="style.css">
