--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
             right: 0;
             bottom: 0;
             z-index: 1;
-            background: radial-gradient(ellipse at center, rgba(255,255,255,0.02) 0%, transparent 70%);
-            opacity: 0.6;
+            background: radial-gradient(ellipse at 30% 50%, rgba(255,255,255,0.03) 0%, transparent 60%),
+                        linear-gradient(135deg, rgba(255,255,255,0.01) 0%, rgba(255,255,255,0.02) 100%);
+            opacity: 0.8;
         }
     </style>
     <link rel="stylesheet" href="style.css">
@@ -262,13 +263,11 @@
     <!-- Footer will be loaded here by script.js -->
     <div id="footer-placeholder"></div>
 
-    <!-- GSAP & Three.js Libraries -->
+    <!-- GSAP Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
-    <!-- Main Application Script -->
-    <script src="script.js" defer></script>
+    <!-- Optimized Application Script -->
 
     <style>
         /* Additional fixes to ensure visibility */
