--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- SEO-Optimized Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite Install | Texas School Furniture Installation | Dallas, TX</title>
     <meta name="description" content="Elite Install is a professional B2B partner for school furniture dealers in Dallas and across Texas, providing reliable, expert installation of educational and FF&E furniture.">
     <meta name="keywords" content="school furniture installation, educational furniture installer, commercial furniture installation, office furniture installation, FF&E installation, Dallas, Fort Worth, Houston, Austin, San Antonio, Texas, B2B installation services">
 
-    <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -17,10 +15,8 @@
     <meta name="msapplication-TileColor" content="#0d0d0d">
     <meta name="theme-color" content="#0d0d0d">
 
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
 
-    <!-- Social Media Sharing Cards -->
     <meta property="og:title" content="Elite Install | Texas School Furniture Installation">
     <meta property="og:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta property="og:type" content="website">
@@ -33,7 +29,6 @@
     <meta name="twitter:description" content="Your trusted partner for professional school and commercial furniture installation in Dallas and throughout Texas.">
     <meta name="twitter:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg">
 
-    <!-- Enhanced JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -68,7 +63,6 @@
     }
     </script>
 
-    <!-- Stylesheet -->
     <style>
         /* Critical CSS for immediate visibility */
         * {
@@ -149,7 +143,6 @@
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
-    <!-- Header will be loaded here by script.js -->
     <div id="header-placeholder"></div>
 
     <main id="main-content">
@@ -157,8 +150,8 @@
         <section class="hero">
             <div id="hero-canvas-container"></div>
             <div class="container hero-content">
-                <h1 class="anim-fade-in-up">Your Reputation, Installed.</h1>
-                <p class="subtitle anim-fade-in-up" data-delay="100">A new standard in B2B furniture installation has arrived. We are a partner built on a simple promise: to protect your reputation as if it were our own. By prioritizing professionalism and clear communication, we deliver results that build trust with you and your clients.</p>
+                <h1>Your Reputation, Installed.</h1>
+                <p class="subtitle">A new standard in B2B furniture installation has arrived. We are a partner built on a simple promise: to protect your reputation as if it were our own. By prioritizing professionalism and clear communication, we deliver results that build trust with you and your clients.</p>
                 <div class="cta-buttons anim-fade-in-up" data-delay="200">
                     <a href="services.html" class="btn btn-primary">Explore Our Services</a>
                     <a href="contact.html" class="btn btn-secondary">Request a Quote</a>
@@ -260,15 +253,11 @@
         </section>
     </main>
 
-    <!-- Footer will be loaded here by script.js -->
     <div id="footer-placeholder"></div>
 
-    <!-- GSAP Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     
-    <!-- Optimized Application Script -->
-
     <style>
         /* Additional fixes to ensure visibility */
         .btn {
